<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Admin_home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navy"
        android:textAlignment="center">

        <TextView
            android:id="@+id/tvHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/admin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bPBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:textColor="@color/black"
            app:srcCompat="@drawable/time_table" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/bDiscussions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:onClick="onClick"
            android:text="@string/discuss"
            android:textColor="@color/black"
            app:srcCompat="@drawable/time_table" />

        <Button
            android:id="@+id/bStaff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/staff"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/time_table" />

    </LinearLayout>
</LinearLayout>