<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".personalised">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red">

        <TextView
            android:id="@+id/tvHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personalised"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10sp">
        <!-- Column 1
             Row 1-->
        <ImageButton
            android:id="@+id/ibTimetable"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginLeft="30sp"
            android:layout_marginStart="30sp"
            android:layout_marginTop="15sp"
            android:background="@drawable/circle_pbutton"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/time_table" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ibTimetable"
            android:layout_marginLeft="47dp"
            android:layout_marginStart="47dp"
            android:layout_marginTop="0dp"
            android:text="@string/timetable"
            android:textStyle="bold"/>

        <!-- Column 2
             Row 1-->

        <ImageButton
            android:id="@+id/ibInformation"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/ibTimetable"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/circle_pbutton"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ibTimetable"
            android:layout_marginEnd="45sp"
            android:layout_marginRight="45sp"
            android:text="@string/information"
            android:textStyle="bold"/>

        <!-- Column 1
             Row 2-->
        <ImageButton
            android:id="@+id/ibExam"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_alignLeft="@+id/ibTimetable"
            android:layout_alignStart="@+id/ibTimetable"
            android:layout_alignTop="@+id/ibModule"
            android:background="@drawable/circle_pbutton"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/exam" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ibTimetable"
            android:layout_alignStart="@+id/ibTimetable"
            android:layout_below="@+id/ibExam"
            android:text="@string/exam" />

        <!-- Column 2
             Row 2-->
        <ImageButton
            android:id="@+id/ibModule"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_alignLeft="@+id/ibInformation"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/ibInformation"
            android:layout_marginTop="150sp"
            android:background="@drawable/circle_pbutton"
            android:contentDescription="@string/app_name"
            android:onClick="Module"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/module" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ibExam"
            android:layout_marginEnd="50sp"
            android:layout_marginRight="50sp"
            android:text="@string/module"
            android:textStyle="bold"/>

        <!-- Column 1
             Row 3-->
        <ImageButton
            android:id="@+id/ibForum"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_alignLeft="@+id/ibTimetable"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/ibTimetable"
            android:layout_marginBottom="85dp"
            android:background="@drawable/circle_pbutton"
            android:contentDescription="@string/app_name"
            android:onClick="Forum"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/forum" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ibForum"
            android:layout_marginLeft="60sp"
            android:layout_marginStart="60sp"
            android:layout_marginTop="-85dp"
            android:text="@string/forum"
            android:textStyle="bold"/>

        <!-- Column 2
             Row 3-->
        <ImageButton
            android:id="@+id/ibProfile"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_alignLeft="@+id/ibInformation"
            android:layout_alignStart="@+id/ibInformation"
            android:layout_alignTop="@+id/ibForum"
            android:background="@drawable/circle_pbutton"
            android:contentDescription="@string/app_name"
            android:onClick="Profile"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ibForum"
            android:layout_marginEnd="60sp"
            android:layout_marginRight="59dp"
            android:layout_marginTop="-85dp"
            android:text="@string/profile"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/red"
            android:layout_alignParentLeft="true"
            android:gravity="center">

            <Button
                android:id="@+id/bHome"
                android:layout_width="64sp"
                android:layout_height="37sp"
                android:layout_centerVertical="true"
                android:background="@color/red"
                android:drawableLeft="@drawable/home"
                android:onClick="onClick"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/bLogout"
                android:layout_width="80sp"
                android:layout_height="37sp"
                android:layout_centerVertical="true"
                android:background="@color/red"
                android:drawableLeft="@drawable/logout"
                android:onClick="onClick"
                android:textColor="@color/black" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>